2024-03-14  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-browse--exclude): Give variable 'var' the local scope
	that it deserves.

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-shell): Expand ~ in file-names (for $f1, $f2), properly
	concat and quote lists of marked files (for $t1 $t2), add user
	hint message that C-c C-k will properly close the terminal window,
	add environment variable: $INSIDE_DIREDC

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	* (diredc-beginning-of-buffer): Fix to advance to first file line.

2024-02-29  Boruch Baum  <boruch_baum@gmx.com>

	*  (diredc--version): Bump to 1.4

2024-02-19  Boruch Baum  <boruch_baum@gmx.com>

	*  (diredc--version): New variable.

2024-01-31  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell--bind-keys): Collect bindings in a
	function in order to be used by different launchers.
	(diredc-shell--launch-shell, diredc-shell--launch-eshell)
	(diredc-shell--launch-emulator): Use it.
	(diredc-shell): Remove duplication.

2024-01-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-previous-directory):  Bugfix: stop creating windows above
	others.

2024-01-23  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-trash-quick-delete): Bugfix: format of list
	sent to function dired--internal-do-deletions

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info): Apply quotes and
	escapes for messy file names.

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-find-alternate-file): ): Bugfix: move focus
	to opened files.

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info-cmd): Redefine from
	string to cons.
	(diredc-show-more-file-info, diredc--show-more-file-info): Improve
	display output.
	(diredc-hist-change-directory): Bugfix: stop creating windows above
	others.

2024-01-18  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--guess-and-do-async-shell-command): New